# fun-datascience

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose-local.yaml  docker-compose.yaml  draw_bar_ok.html  draw_graph_ok.html  draw_heatmap_ok.html  draw_lineplot_ok.html  plot.html
ds/: main.py  pyproject.toml
ds/presentation/: anime_router.py  app.py  dependencies.py  plot_router.py
ds/schemas/: anime.py  plot.py
ds/service/: anime_service.py  plot_service.py
ds/shared/: container.py  settings.py
ds/tests/: test_plot.py
src/: entrypoint_web.rs  lib.rs
src/presentation/: dependencies.rs  mod.rs
src/presentation/web/: app.rs  mod.rs  plot.rs
src/repository/: mod.rs  redis_repository.rs
src/service/: anime_detection_service.rs  mod.rs  plot_schemas.rs  plot_service.rs
src/shared/: container.rs
src/tests/: mod.rs  tests_plot.rs
tests/: mod.rs  tests_anime_prediction.rs  tests_plot.rs
