[package]
name = "fun_datascience"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "web"
path = "src/entrypoint_web.rs"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
charming = "0.3.1"

[dev-dependencies]
rstest = "0.19.0"
rand = "0.8.5"
