[tool.poetry]
name = "visualisation"
version = "0.1.0"
description = ""
authors = ["pibragimov <pibragimov@whoosh.bike>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
jupyterlab = "^4.2.3"
ujson = "^5.10.0"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"
networkx = { extras = ["all"], version = "^3.3" }
bokeh = "^3.5.0"
loguru = "^0.7.2"
netgraph = "^4.13.2"
pydot = "^3.0.1"
pydantic-settings = "^2.3.4"
pytest = "^8.2.2"
torch = "^2.3.1"
torchvision = "^0.18.1"
python-multipart = "^0.0.9"
